add core_l10n for change languages

--- a/modules/core_l10n/lib/l10n/app_en.arb
+++ b/modules/core_l10n/lib/l10n/app_en.arb
@@ -1,282 +1,3 @@
 {
-    "pageTitleLogin": "Log In",
-    "pageSubtitleLogin": "Enter your phone number that registered with a PIN",
-    "pageTitleQrScan": "Total to Pay",
-    "actionLogin": "Login",
-    "pageTitlePhoneNumber": "Phone Number",
-    "pageSubtitlePhoneNumber": "Enter your phone number that registered with \nKB PRASAC Accounut",
-    "labelPhoneNumber": "Phone Number",
-    "hintReferralCode": "Referral code (optional)",
-    "actionContinue": "Continue",
-    "pageTitleVerifyCode": "Verify Code",
-    "pageSubtitleVerifyCode": "Enter the code we sent to {phone_number}",
-    "labelResendOtpAgainIn": "Resend code in {seconds}",
-    "actionResendCode": "Resend code",
-    "errorOtpInvalid": "Incorrect code! Please try again.",
-    "actionOk": "Ok",
-    "pageTitleForgetPin": "Forget PIN",
-    "pageSubtitleForgetPin": "Enter your phone number that registered with your PIN Code",
-    "labelForgetPin": "Forget PIN?",
-    "labelEnterNewPin": "Enter New PIN",
-    "labelEnterYourPin": "Enter Your PIN",
-    "labelConfirmPin": "Confirm Your new PIN",
-    "page_account_number_title": "Account Number",
-    "page_account_number_subtitle": "Enter your account number on customer card",
-    "label_account_number": "Account Number",
-    "page_scan_card_title": "Scan Card",
-    "label_scan_card_info": "Make sure the front of your account card is in frame",
-    "errorUnknown": "Something went wrong",
-    "errorPinFailedAttempt": "Incorrect PIN: {attempt_left} more attempts left",
-    "actionGetStarted": "Get Started",
-    "titleHelpAndSupport": "Help & Support",
-    "messageInfoHelpAndSupport": "If you have any concerns or request check out the list of informations below",
-    "labelKHQRMaterialRequest": "KHQR Material Request",
-    "labelContactCallCenter": "Contact Call Center",
-    "labelFAQs": "FAQs",
-    "labelMessenger": "Messenger",
-    "labelTelegram": "Telegram",
-    "labelBizName": "Business Name",
-    "messageLabelBizNam": "Must have from 5 to 18 character and the same as official supported document",
-    "labelMerchantType": "Merchant Type",
-    "labelBusinessCategory": "Business Category",
-    "labelShopType": "Shop Type",
-    "labelCommentToKBPRASACStaff": "Comment to KB PRASAC staff(optional)",
-    "labelSupportedDocument": "Supported Document (optional)",
-    "hintMessageSupportedDocument": "Can be upload multiple documents",
-    "actionUpload": "Upload",
-    "labelProvinceCity": "Province/City",
-    "labelDistrict": "District",
-    "labelCommune": "Commune",
-    "labelVillage": "Village",
-    "labelAddressLine": "Address Line",
-    "hintAddressLine": "House number, street no.",
-    "labelLocation": "Locations",
-    "labelPinOnAddress": "Pin on Address",
-    "actionDone": "Done",
-    "titleSetupNewBusiness": "Setup New Business",
-    "requiredMgsInputBizName": "The business must not be empty",
-    "maximum": "maximum",
-    "least": "least",
-    "requiredMgsInputBizNameMaxMin": "The business must have at {maximum} {length} characters",
-    "requiredMgsSelectMerchantType": "The merchant type is required",
-    "requiredMgsSelectBizCategory": "The business category is required",
-    "requiredMgsSelectShopType": "The shop type is required",
-    "requiredMgsSelectProvinceCity": "The province or city is required",
-    "requiredMgsSelectDistrict": "The district is required",
-    "requiredMgsSelectCommune": "The commune is required",
-    "requiredMgsSelectVillage": "The village is required",
-    "errorMgsUnableSelectThisImage": "Unable select this image, Please try other image",
-    "titleCropImage": "Crop Image",
-    "titleSupportedDocument": "Supported Document",
-    "descriptionSupportDocumentH": "Document support (jpg, png, pdf)",
-    "descriptionSupportDocumentS": "Memorandum and Articles of Association;Certificate of Incorporation;Approval Letter to Operate Business Issued by the Concerned Ministry or Related Authority;Photo of the business;Business patent;Business license",
-    "actionGoToHomePage": "Go to Homepage",
-    "titleSuccess": "Success!",
-    "labelNewUser": "New User",
-    "labelIHaveReadAndAcceptThe": "I have read and accept the",
-    "labelKBPRASACMerchantAgreement": "KB PRASAC Merchant Agreement",
-    "labelIHaveReadAndAcceptToAllOfTheAbove": "I have read and accept to all of the above",
-    "actionOpenNewAccountInKBPRASACMobileApp": "Open new account in KB PRASAC Mobile App",
-    "labelNoKBPRASACAccount": "No KB PRASAC account?",
-    "actionRegisterWithInviteCode": "Register with Invite Code",
-    "actionRegisterWithKBPRASACAccount": "Register with KB PRASAC Account",
-    "actionImNewUserToKBPRASACMerchant": "I’m new user to KB PRASAC Merchant",
-    "mgsBizCreateSuccess": "Congrats, you’re all done. Your KB PRASAC account is completed successfully.",
-    "labelListOfShops": "List of Shops",
-    "actionCancel": "Cancel",
-    "actionTakephoto": "Take photo",
-    "actionChoosefromphotos": "Choose from photos",
-    "labelTermsConditionsandMerchantAgreement": "Terms & Conditions and Merchant Agreement",
-    "titleSetupBusinessInfo": "Setup Business Info",
-    "actionPickLocation": "Pick Location",
-    "titlePinOnAddress": "Pin on Address",
-    "actionConfirm": "Confirm",
-    "requiredMgsInputBizNameMax18": "The business must have at maximum 18 characters",
-    "requiredMgsInputBizNameMin5": "The business must have at least 5 characters",
-    "labelHome": "Home",
-    "labelDashboard": "Dashboard",
-    "labelMore": "More",
-    "labelShowQr": "Show QR",
-    "messageQrScanClose": "It will close automatically in",
-    "actionDownload": "Download",
-    "actionShare": "Share",
-    "titleMore": "More",
-    "actionViewBusiness": "View Business",
-    "titlePersonalInformation": "Personal Information",
-    "titleSettings": "Settings",
-    "titleReferral": "Referral",
-    "titleInvitationList": "Invitation List",
-    "titleSendFeedback": "Send Feedback",
-    "titleKBPRASACTermsConditions": "KB PRASAC Terms & Conditions",
-    "titleMerchantTermsConditions": "Merchant Terms & Conditions",
-    "titleLogOut": "Log Out",
-    "titleChangeLanguage": "Change Language",
-    "titleNotifications": "Notifications",
-    "titleChangePINCode": "Change PIN code",
-    "titleUseFaceID": "Use Face ID",
-    "actionLogOut": "Log Out",
-    "titleMgsAreYouSure": "Are you Sure?",
-    "desMgsLogOut": "You want to log out from this account",
-    "msgSettingsPage": "Manage app setting including the app language and notification",
-    "actionScreenshot": "Screenshot",
-    "titleSuccessful": "Successful",
-    "labelReceivedInto": "Received into",
-    "labelTransactionID": "Transaction ID",
-    "labelTransactionRef": "Transaction Ref",
-    "labelSenderName": "Sender Name",
-    "labelReceivedBy": "Received By",
-    "labelSenderBank": "Sender Bank",
-    "labelPaymentType": "Payment Type",
-    "labelAllDone": "All Done!",
-    "labelChangePinSuccess": "We’ve changed your PIN Code",
-    "labelEnterYourOldPin": "Enter your Old PIN",
-    "errorReachMaximumAttempt": "Sorry, you’ve reach the maximum attempt limit. Please try again later in {minute} minutes",
-    "labelPhotoSaved": "Photo saved",
-    "labelShareTransaction": "Share transaction successful",
-    "labelDateTime": "Date & Time",
-    "actionReversal": "Reversal",
-    "titleReversal": "Reversal",
-    "labelAmount": "Amount",
-    "labelShortDescription": "Short description",
-    "titleReversalConfirmation": "Reversal Confirmation",
-    "labelYouAreAboutToTransferTo": "You are about to transfer to",
-    "labelInfoReversalPaymentConfirm": "Your reversal transaction can not be undone once you confirm on it.",
-    "labelReceivedHistory": "Received History",
-    "labelReversedFrom": "Reversed from",
-    "labelBusiness": "Business",
-    "labelToPayer": "To Payer",
-    "labelTransferredBy": "Transferred By",
-    "labelAcceptedVai": "Accepted Vai",
-    "actionSignIn": "Sign In",
-    "actionVerify": "Verify",
-    "errorPhoneNumberInvalid": "Phone number is invalid",
-    "errorVerifyAccountNumberFailed": "Verify account number failed. Please check and try again.",
-    "errorTimeout": "Timeout",
-    "errorConnection": "Connection issue",
-    "errorPinMissMatch": "PIN code do not match",
-    "errorPhoneNumberAlreadyRegistered": "Your phone number already registered. You can sign in now.",
-    "labelUseOfficialBusiness": "Use Official Business Name",
-    "labelUsePreferredBusiness": "Use Preferred Business Name",
-    "labelUseAccountSettlement": "Use your Account Settlement Name",
-    "infoUseOfficialBusiness": "This option is suitable for those whose businesses have official documents.",
-    "infoUsePreferredBusiness": "You can use your preferred business name which doesn’t require a official documents.",
-    "infoUseAccountSettlement": "Your KB PRASAC account holder name will be use as a business name.",
-    "pageTitleRegisterWithInviteCode": "Register with Invite Code",
-    "pageSubtitleRegisterWithInviteCode": "Enter the code you received from your business \nowner and your phone number",
-    "hintFullName": "Full name",
-    "hintSixDigitCode": "6 Digit Code",
-    "hintNationalID": "National ID (optional)",
-    "labelRegisterInviteCodeSuccess": "Congrats, you’re all done. Your KB PRASAC \naccount is completed successfully.",
-    "titleProfile": "Profile",
-    "actionChangeProfilePhoto": "Change profile photo",
-    "labelProfileDetails": "Profile details",
-    "titleFullName": "Full Name",
-    "titlePhoneNumber": "Phone Number",
-    "infoUpdateProfileOwnerBusiness": "Note: If you want to update your business information, Please come to KB PRASAC branch nearby you.",
-    "mgsSuccessUpdateProfile": "Profile picture has been changed",
-    "titleNationalID": "National ID",
-    "actionSave": "Save",
-    "requiredMgs": "Field is required",
-    "titleManageBusiness": "Manage Business",
-    "actionSeeAll": "See All",
-    "titleCurrentShop": "Current Shop",
-    "labelBusinessName": "Business Name",
-    "labelSetUpNewCounter": "Set Up New Counter",
-    "labelCounters": "Counters",
-    "labelEmployees": "Employees",
-    "actionClose": "Close",
-    "actionNewCashier": "New Cashier",
-    "actionNewSupervisor": "New Supervisor",
-    "labelNoEmployeeYet": "No Employee Yet",
-    "infoNoEmployeeYet": "The list of the employee will appear here",
-    "mgsEmptyCounter": "Your list of cashier will appear here after you invited them.",
-    "actionAdd": "Add",
-    "infoInviteCoMerchant": "Your list of co-merchant will appear here after you invited them.",
-    "labelShops": "Shops",
-    "labelStaffs": "Staffs",
-    "labelListOfCoMerchant": "List of Co-Merchant",
-    "labelBusinessInformation": "Business Information",
-    "labelEditBusinessDetails": "Edit Business Details",
-    "labelChooseShop": "Choose Shop",
-    "labelSetUpNewShop": "Set Up New Shop",
-    "infoUploadProfileImageSetupShop": "This profile image will appear when your customer make payments",
-    "actionCreate": "Create",
-    "labelShopName": "Shop Name",
-    "requiredMgsInputShopNameMaxMin": "Must have from {from} to {to} character",
-    "hintSelectShopType": "No shop type selected",
-    "titleLinkedKBPRASACAccounts": "Linked KB PRASAC Accounts",
-    "infoLinkedKBPRASACAccounts": "Can link 2 different currency accounts",
-    "actionLink": "Link",
-    "titleSupportedAccountType": "Supported Account Type",
-    "infoSupportedAccountType": "Savings Account;Unifixed Deposit Account;Flexi Growth Savings Account;Payroll Account;Digital Account",
-    "actionViewAccountType": "View Account Type",
-    "actionAddAnotherBankAccount": "Add Another {currency} Account",
-    "labelYouAreAboutTo": "You are about to {action}",
-    "labelNewShop": "New Shop",
-    "labelLinkedAccount": "Linked Account {currency}",
-    "labelYouAreAction": "You've {action}",
-    "labelDisableShop": "Disable Shop",
-    "labelEditShopDetail": "Edit Shop Detail",
-    "labelDeleteShop": "Delete Shop",
-    "labelEnableShop": "Enable Shop",
-    "labelShop": "Shop",
-    "infoDeleteShop": "Note: After you deleted, this shop will no longer in the system.",
-    "labelYouAreAboutToSetup": "You are about to setup",
-    "infoMgsUpdateShopSuccess": "The shop details has been updated",
-    "labelYouAreSetup": "You are Setup",
-    "actionGoToEdit": "Go to Edit",
-    "actionMaybeLater": "Maybe Later",
-    "infoMgsEmptyShopName": "Your default shop don’t have name yet. You can update it now.",
-    "actionUpdate": "Update",
-    "titleListOfCashiers": "List of cashiers",
-    "hintMgsListOfCashiers": "Your list of cashiers will appear here after you invited them",
-    "labelCloneCounter": "Clone Counter",
-    "labelCounterName": "Counter Name",
-    "labelEditCounterDetails": "Edit Counter Details",
-    "titleSetupNewCounter": "Setup New Counter",
-    "labelUnderShop": "Under Shop",
-    "labelCounter": "Counter",
-    "labelDisabled": "Disabled",
-    "labelEnableCounter": "Enable Counter",
-    "labelDeleteCounter": "Delete Counter",
-    "labelCounterDisabled": "Counter Disabled",
-    "hintMgsCounterDisabled": "You can still manage things in this counter, beside this counter will stop receiving any payment.",
-    "labelEditCounterName": "Edit Counter Name",
-    "labelAcceptInvitation": "You have been invited to be cashier in {bizName}. Click Accept to become the new role.",
-    "actionAccept": "Accept",
-    "actionLater": "Maybe later",
-    "labelAcceptedBuz": "You’ve accepted into {bizName}",
-    "labelInviteCode": "Invite Code",
-    "labelInviteCodeInfo": "You have been invited to {bizName} Business. Enter the\n6 digits invite code to confirm your acceptance.",
-    "hintInviteCode": "6 Digit Code",
-    "labelInvitationMessageInfo": "Manage app setting including the app language and notification",
-    "labelCurrentBusiness": "Current Business",
-    "labelOtherBusiness": "Other Business",
-    "labelInviteAs": "Invite as a {roleName} in {bizName}",
-    "labelListEmpty": "List Empty",
-    "errorInviteCodeExpired": "Invite code is expired",
-    "titleAddSupervisor": "Add New Supervisor",
-    "titleAddCashier": "Add New Cashier",
-    "titleAddCoMerchant": "Add New Co-Merchant",
-    "labelLinkedShop": "Linked Shop",
-    "labelLinkedCounter": "Linked Counter",
-    "labelLinkedBusiness": "Linked Business",
-    "labelReversal": "Reversal",
-    "labelReversalInfo": "Enable this feature allow staff can do the \nreverse payment",
-    "labelInviteConfirm": "You are about to invite",
-    "labelSupervisor": "Supervisor",
-    "labelCashier": "Cashier",
-    "labelCoMerchant": "Co-Merchant",
-    "labelInviteSuccessTitle": "You’ve invited {fullName}\nas a new {role}",
-    "labelInviteSuccessMessage": "Let {fullName} activate KB PRASAC \nMerchant App by sharing this invite code.",
-    "labelExpiredIn": "Expires in",
-    "labelDurationInHours": "{duration} hours",
-    "labelChooseCounter": "Choose Linked Counter",
-    "titleChooseSupervisor": "Choose existing supervisor",
-    "titleChooseCashier": "Choose existing cashier",
-    "labelAddNewSupervisorInfo": "Or add new supervisor",
-    "labelAddNewCashierInfo": "Or add new cashier",
-    "actionAddNew": "Add New",
-    "labelListSupervisor": "List of supervisor",
-    "labelListCashiers": "List of cashiers"
+    "pageTitleLogin": "Log In"
 }
