add register patient from pre-patient and update some code

--- a/modules/core_l10n/lib/l10n/app_en.arb
+++ b/modules/core_l10n/lib/l10n/app_en.arb
@@ -59,5 +59,6 @@
     "labelSale": "営業",
     "labelStaffName": "業務",
     "labelAdmittedToHospital": "受入病院",
-    "labelNumberOfGroupMembers": "グループ人数"
+    "labelNumberOfGroupMembers": "グループ人数",
+    "labelLogout": "ログアウト"
 }
