add change language and update route for module chat

--- a/modules/core_l10n/lib/l10n/app_en.arb
+++ b/modules/core_l10n/lib/l10n/app_en.arb
@@ -11,5 +11,6 @@
     "labelSalesManagement": "Sales",
     "labelReport": "Report",
     "labelHelp": "Help",
-    "labelCenterHeadquarters": "Center Headquarters"
+    "labelCenterHeadquarters": "Center Headquarters",
+    "changeLanguage": "Please select a language"
 }
