--- a/modules/core_l10n/lib/l10n/app_ja.arb
+++ b/modules/core_l10n/lib/l10n/app_ja.arb
@@ -64,5 +64,5 @@
     "labelAdmittedToHospital": "受入病院",
     "labelNumberOfGroupMembers": "グループ人数",
     "labelLogout": "ログアウト",
-    "changeLanguage": "Please select a language"
+    "changeLanguage": "言語を選択してください"
 }
