--- a/modules/core_l10n/lib/l10n/app_vi.arb
+++ b/modules/core_l10n/lib/l10n/app_vi.arb
@@ -11,5 +11,6 @@
   "labelSalesManagement": "Việc bán hàng",
   "labelReport": "Báo cáo",
   "labelHelp": "Giúp đỡ",
-  "labelCenterHeadquarters": "Trụ sở trung tâm"
+  "labelCenterHeadquarters": "Trụ sở trung tâm",
+  "changeLanguage": "Vui lòng chọn một ngôn ngữ"
 }
