--- a/modules/core_l10n/lib/l10n/app_zh_TW.arb
+++ b/modules/core_l10n/lib/l10n/app_zh_TW.arb
@@ -11,5 +11,6 @@
   "labelSalesManagement": "銷售量",
   "labelReport": "報告",
   "labelHelp": "幫助",
-  "labelCenterHeadquarters": "中心總部"
+  "labelCenterHeadquarters": "中心總部",
+  "changeLanguage": "請選擇語言"
 }
